CHANGES for LIRE
================

2013-06-23
==========
  -  Added a new distance routine to OpponentHistogram, that could prove faster when reading from an index.

2013-06-22
==========
  -  Tested LocalBinaryPatterns in TestGroundTruth

2013-06-22
==========
  - Added local binary patterns implementation & tests

2013-06-03
==========
  - Changed BitSampling member access to getters & setters.

2013-06-02
==========
  - Additional tests and bug fixes in BitSamplingImageSearcher and GenericFastImageSearcher
  - net.semanticmetadata.lire.indexing.tools.ProximityHashingIndexor added.

2013-06-01
==========
  - Added TestHashing to test the performance of approximate search.
  - Tuned ParallelIndexer to better cope with OutOfMemoryError problems.
  - Investigated optimal parameters for BitSampling with an ColorLayout & OpponentHistogram index (works fine)
    bits = 30, numFunctionBundles = 100, w = 4d;
  - Investigated optimal parameters for BitSampling with an PHOG index (does not work too well)
    bits = 16, numFunctionBundles = 100, w = 4d;

2013-05-28
==========
  - Changed quantization and serialization of AutoColorCorrelogram. It now just takes 512 bytes for
    a descriptor instead of 4096 with the same (even slightly better) retrieval performance.

2013-05-28
==========
  - Added SPFCTH
  - Fixed serialization of SPJCD

2013-05-27
==========
  - Added SPJCD

2013-05-19
==========
  - Fixed bug in ParallelIndexer and ParallelExtractor
  - Added SPCEDD

2013-05-15
==========
  - LireDemo 0.9.4 beta release.

2013-05-14
==========
  - Fixed bugs in CEDD, FCTH and JCD (serialization)
  - Added benchmarking for the UCID data set.
  - Clean up in AutoColorCorrelogram & change to jsd as default metric.

2013-05-11
==========
  - Optimization in GenericImageSearcher
  - Optimizations in FCTH, CEDD and JCD Tanimoto coefficient implementations
  - Added "-n" option to ParallelExtractor

2013-05-10
==========
  - Bug fix in ParallelExtractor (tnx to M. Riegler)